[project]
name = "timeseries_forecasting"
version = "0.1.0"
description = "Multivariate Time Series Forecasting Using Linear RNNs"
authors = [
    { name = "Vladyslav Moroshan" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"

dependencies = [
    "torch>=2.5.0",
    "torchmetrics",
    "triton==3.2.0",
    "numpy",
    "flash-linear-attention @ git+https://github.com/fla-org/flash-linear-attention@main",
    "scikit-learn",
    "matplotlib",
    "gluonts",
    "tqdm",
    "wandb",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "pytest>=8",
    "ruff",
    "mypy",
    "commitizen",
    "black",
]

[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.2"]
build-backend = "setuptools.build_meta"

package-dir = {"" = "src"}
